<resources>
    <string name="app_name">AudioPlatform</string>
    <string name="app_version_name">v1.0.8</string>
    <string name="app_full_name">AudioPlatform v1.0.8</string>

    <string name="wave_player">wave player</string>
    <string name="choose_channel_out">choose a channel out : </string>
    <string name="wave_player_2">wave player : </string>
    <string name="frequency">%1$d K Hz</string>

    <string name="recorder">recorder</string>
    <string name="choose_channel_in">choose a channel in : </string>
    <string name="mono">mono</string>
    <string name="stereo">stereo</string>
    <string name="record_wav">record wav</string>\
    <string name="start_both">start both</string>
    <string name="create_dir">create  directory</string>
    <string name="top_mic">top_mic</string>
    <string name="bottom_mic">bottom_mic</string>
    <string name="BeginHz">BeginHz</string>
    <string name="StepHz">StepHz</string>
    <string name="freqNum">freqNum</string>
    <string name="simpleRate">simpleRate</string>

    <string name="play_time">play time (ms) : </string>
    <string name="all_frequencies_at_the_same_time">play all frequencies at the same time</string>
    <string name="number_of_times">number of times : </string>
    <string name="initial_volume">initial volume : </string>
    <string name="step_volume">step volume (using \';\' as separator) : </string>
    <string name="number_of_collected">number of collected : %d</string>
    <string name="reset">reset</string>



</resources>
